@@ -1,5 +1,5 @@
 /*
- * Action.java
+ * WebAction.java
  *
  * Copyright 2007-2012 Patrick Mairif.
  * The program is distributed under the terms of the Apache License (ALv2).
@@ -18,7 +18,7 @@ import de.highbyte_le.weberknecht.request.View;
  * 
  * @author pmairif
  */
-public interface Action extends ExecutableAction {
+public interface WebAction extends ExecutableAction {
 	/**
 	 * return the view information
 	 */
